# qbtarr

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compose.yml.in  docker-compose.yml  docker-compose.yml.in  hotio.env  srv.env.in
cmake/: AddDcfCommand.cmake  AddService.cmake
config/nginx/: qbtarr.conf
config/qbt/config/: qBittorrent.conf
config/radarr/: config.xml
config/sonarr/: config.xml
openrc/: CMakeLists.txt  dcs.in
scripts/: docker_compose_f.in
services/bazarr/: bazarr.yml
services/jellyfin/: jellyfin.yml
services/jellyseerr/: jellyseerr.yml
services/lidarr/: lidarr.yml
services/lidarr/config/: config.xml
services/mpd/: Dockerfile  mpd.yml
services/mpd/config/: mpd.conf
services/mympd/: mympd.yml
services/nginx/: nginx.conf  nginx.yml
services/nginx/qbtarr.d/: lidarr.conf  mympd.conf  prowlarr.conf  qbittorrent.conf  radarr.conf  sonarr.conf  transmission.conf
services/plex/: plex.yml
services/prowlarr/: prowlarr.yml
services/prowlarr/config/: config.xml
services/qbittorrent/: qbittorrent.yml  qbt.yml
services/qbittorrent/config/config/: qBittorrent.conf
services/radarr/: radarr.yml
services/sonarr/: sonarr.yml
services/traefic/: traefic.yml
services/traefik/: traefik.yml
services/transmission/: transmission.yml
